2899 [Settings]             fixed worker settings window when using High DPI (regression of 2884)
2898 [Main]                 fixed OneClick audio/video profile selections overwriting the main tab profile selections at next restart
2897 [DGIndexNV Indexer]    adjusted AVS script parameters (requires DGIndexNV 2053.163+)
                            mod2 is forced for crop values (was mod4 before)
                            added a check to ensure that the full path information is written into the dgi file


Changelog 2876 --> 2896

Features/Changes:
[Worker]               improved worker handling
                       - for each job type the process and I/O priority can be defined
                       - changing the priority in the progress window does change it only for the current job
                       - rule sets can be specified based on which it is determined how many jobs of which type are allowed to run in parallel
                       - settings to be found in the options window	  
[Main]                 some menu items have been moved/renamed:
                       - "options\settings"       to "options"
                       - "options\update"         to "tools\update"
                       - "workers\worker summary" to "view\worker overview"
[Settings]             input filters are restricted to 8 bit by default (to be disabled in the options window)
[OneClick]             added support for VFR input files (requires mkv/mp4 output)
 

Enhancements/Fixes:
[OneClick]             fixed only using at maximum 2 audio/subtitle tracks in batch mode (regression of 2861). bug #927
[x264]                 fixed high bit depth support if ffmpeg is not used (regression of 2874)
[AVS Script Creator]   if resize with DGIndexNV is enabled also cropping will be done that way (mod4 is forced for crop values)


Changelog 2836 --> 2876

Features/Changes:
                       added high bit depth support (requires AVS+)